# init-tikz

./: pyproject.toml
init_tikz/: __main__.py  functions_tex.py  main.py
