[tool.poetry]
name = "init-tikz"
version = "0.1.6"
description = "Added render code for every environments"
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "init_tikz"}]

[tool.poetry.scripts]
init-tikz = "init_tikz.main:main"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
